--- a/index.html
+++ b/index.html
@@ -218,18 +218,20 @@
             
             <div data-aos="fade-up" data-aos-delay="100">
                 <div class="aspect-video bg-gray-200 dark:bg-gray-800 rounded-lg flex items-center justify-center">
-                    <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID_1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/YuG2y-e8oOQ?si=WDfS2R7MjDdQChqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <h3 class="mt-4 text-lg font-semibold">Título do Vídeo 1</h3>
-                <p class="text-gray-600 dark:text-gray-400">Breve descrição sobre o que este vídeo aborda e os principais pontos que o espectador aprenderá.</p>
+                <h3 class="mt-4 text-lg font-semibold">Recicla Mack — Como descartar corretamente lixo eletrônico!</h3>
+                <p class="text-gray-600 dark:text-gray-400">Neste episódio, mostramos como é possível transformar uma ação simples, o descarte correto de eletrônicos. Uma ação simples, mas de grande impacto positivo para o meio ambiente.</p>
             </div>
 
             <div data-aos="fade-up" data-aos-delay="200">
                 <div class="aspect-video bg-gray-200 dark:bg-gray-800 rounded-lg flex items-center justify-center">
-                    <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID_2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/-6Dx_tjFqE8?si=5g_-joeVp4z2Akmx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <h3 class="mt-4 text-lg font-semibold">Título do Vídeo 2</h3>
-                <p class="text-gray-600 dark:text-gray-400">Breve descrição sobre o que este vídeo aborda e os principais pontos que o espectador aprenderá.</p>
+                <h3 class="mt-4 text-lg font-semibold">Recicla Mack #1 — O impacto ambiental do descarte incorreto de lixo eletrônico</h3>
+                <p class="text-gray-600 dark:text-gray-400">No episódio de estreia do Recicla Mack, mergulhamos no impacto do descarte incorreto de lixo eletrônico!
+
+Você sabe o que realmente acontece quando computadores, celulares e outros aparelhos antigos são jogados fora sem o devido cuidado?</p>
             </div>
 
         </div>
@@ -238,18 +240,34 @@
     <section id="fontes" class="mt-20 mb-10 px-4">
         <h2 data-aos="fade-up" class="text-3xl font-bold text-center mb-10">Fontes e Links Úteis</h2>
         <div data-aos="fade-up" data-aos-delay="100" class="max-w-4xl mx-auto bg-white dark:bg-gray-800 p-8 rounded-lg shadow-lg">
-            <ul class="space-y-4 text-gray-600 dark:text-gray-400">
+            <ul class="space-y-6">
                 <li>
-                    <strong class="font-semibold text-gray-800 dark:text-gray-200">Global E-waste Monitor:</strong> Principal fonte para os dados estatísticos apresentados na página.
-                    <a href="https://globalewaste.org/" target="_blank" rel="noopener noreferrer" class="text-amber-700 dark:text-amber-400 hover:underline ml-2 block sm:inline-block mt-1 sm:mt-0">[Acessar Relatório]</a>
+                    <div>
+                        <strong class="font-semibold text-gray-800 dark:text-gray-200 block text-lg">Recicla Mack - Canal Youtube</strong>
+                        <p class="text-gray-600 dark:text-gray-400 mt-1">Canal de comunicação do nosso projeto com a comunidade, através de vídeos informativos e podcasts.</p>
+                    </div>
+                    <a href="https://www.youtube.com/@ReciclaMack" target="_blank" rel="noopener noreferrer" class="mt-3 inline-block bg-amber-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-700 dark:bg-amber-500 dark:hover:bg-amber-600 transition-colors duration-300">Acessar Youtube</a>
                 </li>
-                <li class="pt-4 border-t border-gray-200 dark:border-gray-700">
-                    <strong class="font-semibold text-gray-800 dark:text-gray-200">Green Eletron:</strong> Uma das maiores gestoras para a logística reversa de eletroeletrônicos no Brasil.
-                    <a href="https://www.greeneletron.org.br/localizador" target="_blank" rel="noopener noreferrer" class="text-amber-700 dark:text-amber-400 hover:underline ml-2 block sm:inline-block mt-1 sm:mt-0">[Encontrar Pontos de Coleta]</a>
+                <li class="pt-6 border-t border-gray-200 dark:border-gray-700">
+                    <div>
+                        <strong class="font-semibold text-gray-800 dark:text-gray-200 block text-lg">Global E-waste Monitor</strong>
+                        <p class="text-gray-600 dark:text-gray-400 mt-1">Principal fonte para os dados estatísticos apresentados na página.</p>
+                    </div>
+                    <a href="https://globalewaste.org/" target="_blank" rel="noopener noreferrer" class="mt-3 inline-block bg-amber-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-700 dark:bg-amber-500 dark:hover:bg-amber-600 transition-colors duration-300">Acessar Relatório</a>
                 </li>
-                <li class="pt-4 border-t border-gray-200 dark:border-gray-700">
-                    <strong class="font-semibold text-gray-800 dark:text-gray-200">Política Nacional de Resíduos Sólidos:</strong> Conheça a Lei nº 12.305, que estrutura a gestão de resíduos no Brasil.
-                    <a href="http://www.planalto.gov.br/ccivil_03/_ato2007-2010/2010/lei/l12305.htm" target="_blank" rel="noopener noreferrer" class="text-amber-700 dark:text-amber-400 hover:underline ml-2 block sm:inline-block mt-1 sm:mt-0">[Ler a Lei]</a>
+                <li class="pt-6 border-t border-gray-200 dark:border-gray-700">
+                    <div>
+                        <strong class="font-semibold text-gray-800 dark:text-gray-200 block text-lg">Green Eletron</strong>
+                        <p class="text-gray-600 dark:text-gray-400 mt-1">Uma das maiores gestoras para a logística reversa de eletroeletrônicos no Brasil.</p>
+                    </div>
+                    <a href="https://greeneletron.org.br/onde-descartar/" target="_blank" rel="noopener noreferrer" class="mt-3 inline-block bg-amber-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-700 dark:bg-amber-500 dark:hover:bg-amber-600 transition-colors duration-300">Encontrar Pontos de Coleta</a>
+                </li>
+                <li class="pt-6 border-t border-gray-200 dark:border-gray-700">
+                    <div>
+                        <strong class="font-semibold text-gray-800 dark:text-gray-200 block text-lg">Política Nacional de Resíduos Sólidos</strong>
+                        <p class="text-gray-600 dark:text-gray-400 mt-1">Conheça a Lei nº 12.305, que estrutura a gestão de resíduos no Brasil.</p>
+                    </div>
+                    <a href="http://www.planalto.gov.br/ccivil_03/_ato2007-2010/2010/lei/l12305.htm" target="_blank" rel="noopener noreferrer" class="mt-3 inline-block bg-amber-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-amber-700 dark:bg-amber-500 dark:hover:bg-amber-600 transition-colors duration-300">Ler a Lei</a>
                 </li>
             </ul>
         </div>
